Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-26861

LinuxDevice: file operation blocks infinitely when ssh server is not running

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P1: Critical
    • None
    • Qt Creator 7.0.0-beta1
    • Remote Linux
    • None
    • All
    • 7c91900cfb (qt-creator/qt-creator/master) 7c91900cfb (qt-creator/qt-creator/qmlprojectstorage)

    Description

      In this case the ShellThreadHandler::m_shell finishes silently soon after start. In meantime we are calling blocking outputForRunInShell() which tries to read from not running process and blocks infinitely.

      Attachments

        For Gerrit Dashboard: QTCREATORBUG-26861
        # Subject Branch Project Status CR V

        Activity

          People

            jkobus Jarek Kobus
            jkobus Jarek Kobus
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes